# platform.core.uifw.ui-viewmgr

./: .cproject  .project  AUTHORS  CMakeLists.txt  README  cpplint_tizen_160520.py  cpplint_tizen_dir.sh  org.tizen.ui-viewmgr.manifest  org.tizen.ui-viewmgr.xml  q  tags  ui-viewmgr-demo.xml  ui-viewmgr.manifest  ui-viewmgr.pc.in  ui.viewmgr.demo.manifest  ui.viewmgr.demo.xml  ui.viewmgr.demo.xml.in
data/: ui-viewmgr.uri
data/edc/: ui-viewmgr.edc
doc/: Doxyfile.in
edc_resource/: ui-viewmgr.edc
inc/: main.h  main_c.h
packaging/: ui-controls.spec  ui-viewmgr.spec
pc/: ui-viewmgr.pc.in
res/: ui-viewmgr.edc
src/: CMakeLists.txt  app_controller.h  efl_viewmgr.h  main.cpp  page1_controller.h  page2_controller.h  page3_controller.h  page4_controller.h  page5_controller.h  page6_controller.h  ui_basic_view.cpp  ui_basic_view.h  ui_controller.cpp  ui_controller.h  ui_controller_base.cpp  ui_controller_base.h  ui_view.cpp  ui_view.h  ui_view_base.cpp  ui_view_base.h  ui_viewmgr.cpp  ui_viewmgr.h  ui_viewmgr_base.  ui_viewmgr_base.cpp  ui_viewmgr_base.h  ui_viewmgr_base.h~
src/efl/: efl_viewmgr.h  ui_controller.cpp  ui_controller.h  ui_key_handler.cpp  ui_key_handler.h  ui_key_listener.cpp  ui_key_listener.h  ui_view.cpp  ui_view.h  ui_viewmanager.h  ui_viewmgr.cpp  ui_viewmgr.h
src/efl/CAPI/: ui_controller_capi.h  ui_viewmanager.cpp  ui_viewmanager.h  ui_viewmanager_private.h
src/efl/example/: main.cpp  page1.h  page2.h  page3.h  page4.h  page5.h  page6.h
src/efl/example/example_c/: main.cpp
src/efl/mobile/: efl_viewmgr.h  mobile_key_handler.cpp  mobile_key_handler.h  ui_basic_controller.h  ui_basic_key_listener.cpp  ui_basic_key_listener.h  ui_basic_view.cpp  ui_basic_view.h  ui_basic_viewmgr.h  ui_tab_view.cpp  ui_tab_view.h  ui_viewmanager.h
src/examples/: CMakeLists.txt  main.cpp  main.h  page1.h  page3.h  page6.h  viewmgr_demo.c
src/examples/efl/: CMakeLists.txt  contents.cpp  main.cpp  main.h  page1.h  page10.h  page11.h  page12.h  page13.h  page14.h  page15.h  page16.h  page2.h  page3.h  page4.h  page5.h  page6.h  page7.h  page8.h  page8_controller.h  page9.h
src/examples/efl/c/: CMakeLists.txt  contents.cpp  main.c  main.cpp  main.h  page1.cpp  page10.cpp  page11.cpp  page12.cpp  page13.cpp  page14.cpp  page15.cpp  page16.cpp  page2.cpp  page3.cpp  page4.cpp  page5.cpp  page6.cpp  page7.cpp  page8.cpp  page9.cpp
src/examples/efl/cpp/: contents.cpp  main.cpp  main.h  page1.h  page10.h  page11.h  page12.h  page13.h  page14.h  page15.h  page16.h  page2.h  page3.h  page4.h  page5.h  page6.h  page7.h  page8.h  page9.h
src/examples/efl_c/: main.c  main.h
src/include/: CMakeLists.txt  UiViewManager.h  ui_view.h  ui_viewmanager.h  ui_viewmgr.h  ui_viewmgr_private.h
src/include/efl/: UiBaseKeyListener.h  UiBaseOverlay.h  UiBaseView.h  UiBaseViewManager.h  UiBaseViewmgr.h  ui_base_app.h  ui_base_controller.h  ui_base_key_listener.h  ui_base_overlay.h  ui_base_popup.h  ui_base_singleton.h  ui_base_view.h  ui_base_viewmanager.h  ui_base_viewmgr.h  ui_controller.h  ui_view.h  ui_viewmanager.h  ui_viewmanager_base.h  ui_viewmgr.h
src/include/efl/mobile/: UiApp.h  UiKeyListener.h  UiMenu.h  UiMobileViewManager.h  UiPopup.h  UiStandardView.h  UiView.h  UiViewmgr.h  ui_app.h  ui_app_capi.h  ui_basic_controller.h  ui_basic_key_listener.h  ui_basic_view.h  ui_basic_viewmgr.h  ui_controller.h  ui_key_listener.h  ui_menu.h  ui_mobile_viewmanager.h  ui_popup.h  ui_standard_view.h  ui_view.h  ui_viewmanager.h  ui_viewmanager_mobile.h  ui_viewmgr.h
src/include/efl/mobile/c/: _ui_common_view_capi.h  _ui_private.h  _ui_private_view.h  ui_app.h  ui_app_c.h  ui_application.h  ui_capi_private.h  ui_menu.h  ui_menu_c.h  ui_mobile_viewmanager.h  ui_popup.h  ui_popup_c.h  ui_standard_view.h  ui_tizen_app.h  ui_view.h  ui_view_c.h  ui_viewmgr.h  ui_viewmgr_app.h  ui_viewmgr_c.h
src/include/interface/: UiIfaceApp.h  UiIfaceOverlay.h  UiIfaceRotatable.h  UiIfaceTypes.h  UiIfaceView.h  UiIfaceViewManager.h  UiIfaceViewmgr.h  ui_iface_app.h  ui_iface_controller.h  ui_iface_overlay.h  ui_iface_rotatable.h  ui_iface_singleton.h  ui_iface_types.h  ui_iface_view.h  ui_iface_viewmanager.h  ui_iface_viewmgr.h  ui_viewmanager_interface.h
src/interface/: ui_controller_base.cpp  ui_controller_base.h  ui_controller_interface.cpp  ui_controller_interface.h  ui_iface_controller.cpp  ui_iface_controller.h  ui_iface_view.cpp  ui_iface_view.h  ui_iface_viewmgr.cpp  ui_iface_viewmgr.h  ui_view_base.cpp  ui_view_base.h  ui_view_interface.cpp  ui_view_interface.h  ui_viewmanager_interface.h  ui_viewmgr.h  ui_viewmgr_base.cpp  ui_viewmgr_base.h  ui_viewmgr_interface.cpp  ui_viewmgr_interface.h
src/lib/: CMakeLists.txt  ui_view.c  ui_viewmgr.c
src/lib/efl/: UiBaseKeyListener.cpp  UiBaseOverlay.cpp  UiBaseView.cpp  UiBaseViewmgr.cpp  ui_base_app.cpp  ui_base_controller.cpp  ui_base_key_listener.cpp  ui_base_overlay.cpp  ui_base_popup.cpp  ui_base_view.cpp  ui_base_viewmanager.h  ui_base_viewmgr.cpp  ui_controller.cpp  ui_key_listener.cpp  ui_view.cpp  ui_viewmgr.cpp
src/lib/efl/mobile/: UiApp.cpp  UiKeyListener.cpp  UiMenu.cpp  UiPopup.cpp  UiStandardView.cpp  UiView.cpp  UiViewmgr.cpp  ui_app.cpp  ui_app.h  ui_app_capi.cpp  ui_basic_controller.cpp  ui_basic_key_listener.cpp  ui_basic_view.cpp  ui_basic_viewmgr.cpp  ui_controller.cpp  ui_impl_app.cpp  ui_impl_app.h  ui_impl_view.cpp  ui_impl_view.h  ui_key_listener.cpp  ui_menu.cpp  ui_menu.h  ui_popup.cpp  ui_popup.h  ui_standard_view.cpp  ui_view.cpp  ui_view.h  ui_viewmanager.h  ui_viewmgr.cpp  ui_viewmgr.h
src/lib/efl/mobile/c/: ui_app.cpp  ui_app_c.cpp  ui_application.cpp  ui_menu.cpp  ui_menu_c.cpp  ui_popup.cpp  ui_popup_c.cpp  ui_standard_view.cpp  ui_tizen_app.cpp  ui_view.cpp  ui_view_c.cpp  ui_viewmgr.cpp  ui_viewmgr_app.cpp
src/lib/interface/: UiIfaceApp.cpp  UiIfaceOverlay.cpp  UiIfaceView.cpp  UiIfaceViewmgr.cpp  ui_iface_app.cpp  ui_iface_controller.cpp  ui_iface_overlay.cpp  ui_iface_overlay.h  ui_iface_view.cpp  ui_iface_view.h  ui_iface_viewmanager.h  ui_iface_viewmgr.cpp  ui_iface_viewmgr.h
