CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(org.tizen.ui-viewmgr)

SET(PACKAGE ui.viewmgr.demo)
SET(BINNAME ui-viewmgr)
SET(PREFIX ${CMAKE_INSTALL_PREFIX})
SET(EXEC_DIR ${PREFIX})
SET(BINDIR ${PREFIX}/bin)
SET(LIBDIR ${PREFIX}/lib)
SET(INCDIR ${PREFIX}/include)
SET(IMGDIR ${PREFIX}/share/${BINNAME}/images)
SET(VERSION_MAJOR 0)
SET(VERSION ${VERSION_MAJOR}.1.0)
SET(VENDOR "samsung")

SET(CMAKE_SKIP_BUILD_RPATH TRUE)

IF("${CMAKE_BUILD_TYPE}" STREQUAL "")
	SET(CMAKE_BUILD_TYPE "Release")
ENDIF("${CMAKE_BUILD_TYPE}" STREQUAL "")
MESSAGE("Build type: ${CMAKE_BUILD_TYPE}")

IF(NOT DBDIR)
	SET(DBDIR "$ENV{HOME}")
ENDIF(NOT DBDIR)
ADD_DEFINITIONS("-DDBDIR=\"${DBDIR}\"")
ADD_DEFINITIONS("-DPREFIX=\"${CMAKE_INSTALL_PREFIX}\"")
ADD_DEFINITIONS("-DVERSION=\"${VERSION}\"")
ADD_DEFINITIONS("-DPACKAGE=\"${PACKAGE}\"")
ADD_DEFINITIONS("-DPLUGINDIR=\"${PLUGINDIR}\"")
ADD_DEFINITIONS("-DLOCALE_DIR=\"${LOCALEDIR}\"")
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall")

SET(EDJ_PATH "${RESDIR}/edje")

INCLUDE(FindPkgConfig)

ADD_SUBDIRECTORY(src)

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_CFLAGS} -fPIC -Wall -Werror -fPIE")
SET(CMAKE_C_FLAGS_DEBUG "-O2 -g")
SET(CMAKE_EXE_LINKER_FLAGS "-Wl,--as-needed -Wl,--rpath=/usr/lib")

CONFIGURE_FILE(${BINNAME}.pc.in ${BINNAME}.pc @ONLY)
INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/${BINNAME}.pc DESTINATION lib/pkgconfig)

ADD_CUSTOM_TARGET(${BINNAME}.edj
   COMMAND edje_cc -id ${CMAKE_CURRENT_SOURCE_DIR}/data/edc
   ${CMAKE_SOURCE_DIR}/data/edc/${BINNAME}.edc ${CMAKE_BINARY_DIR}/${BINNAME}.edj
   DEPENDS ${CMAKE_SOURCE_DIR}/data/edc/${BINNAME}.edc
   )
ADD_DEPENDENCIES(${BINNAME} ${BINNAME}.edj)
INSTALL(FILES ${CMAKE_BINARY_DIR}/${BINNAME}.edj DESTINATION /usr/share/edje/${BINNAME})
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/ui.viewmgr.demo.xml DESTINATION /usr/share/packages/)
INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/data/images/ DESTINATION ${IMGDIR} FILES_MATCHING PATTERN "*.png")
