CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(org.tizen.ui-viewmgr)

SET(PREFIX ${CMAKE_INSTALL_PREFIX})
SET(VERSION 0.1.0)
SET(VENDOR "samsung")

SET(LIBNAME ui-viewmgr)
SET(LIBDIR ${CMAKE_INSTALL_LIBDIR})
SET(INCDIR ${PREFIX}/include)
SET(EDJDIR "/usr/share/edje/${LIBNAME}")

SET(BINNAME ui.viewmgr.demo)
SET(BINDIR /usr/apps/${BINNAME})
SET(IMGDIR ${BINDIR}/data/images)
SET(ICONDIR ${BINDIR}/shared/res)

SET(CMAKE_SKIP_BUILD_RPATH TRUE)

IF("${CMAKE_BUILD_TYPE}" STREQUAL "")
	SET(CMAKE_BUILD_TYPE "Release")
ENDIF("${CMAKE_BUILD_TYPE}" STREQUAL "")
MESSAGE("Build type: ${CMAKE_BUILD_TYPE}")

ADD_DEFINITIONS("-DPREFIX=\"${CMAKE_INSTALL_PREFIX}\"")
ADD_DEFINITIONS("-DVERSION=\"${VERSION}\"")
ADD_DEFINITIONS("-DBINNAME=\"${BINNAME}\"")
ADD_DEFINITIONS("-DLOCALE_DIR=\"${LOCALEDIR}\"")

IF("${TARGET_LANGUAGE}" STREQUAL "c++")
	ADD_DEFINITIONS(-DTARGET_LANG_CPLUS)
ENDIF()

INCLUDE(FindPkgConfig)

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_CFLAGS} -g -O2 -Wall")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -O2 -Wall -std=c++0x")

ADD_SUBDIRECTORY(src)

#pc file
CONFIGURE_FILE(pc/${LIBNAME}.pc.in pc/${LIBNAME}.pc @ONLY)
INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/pc/${LIBNAME}.pc DESTINATION ${LIBDIR}/pkgconfig)

#edj file
ADD_CUSTOM_TARGET(${LIBNAME}.edj
   COMMAND edje_cc -id ${CMAKE_CURRENT_SOURCE_DIR}/data/edc
   ${CMAKE_SOURCE_DIR}/data/edc/${LIBNAME}.edc ${CMAKE_BINARY_DIR}/data/edc/${LIBNAME}.edj
   DEPENDS ${CMAKE_SOURCE_DIR}/data/edc/${LIBNAME}.edc
   )
ADD_DEPENDENCIES(${LIBNAME} ${LIBNAME}.edj)
INSTALL(FILES ${CMAKE_BINARY_DIR}/data/edc/${LIBNAME}.edj DESTINATION ${EDJDIR})

#xml file
CONFIGURE_FILE(${BINNAME}.xml.in ${BINNAME}.xml @ONLY)
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/${BINNAME}.xml DESTINATION /usr/share/packages/)

#image file
INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/data/images/ DESTINATION ${IMGDIR} FILES_MATCHING PATTERN "*.png")

#icon file
INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/shared/res/ DESTINATION ${ICONDIR} FILES_MATCHING PATTERN "*.png")
