SET(EXAM_NAME viewmgr_demo)
SET(EXAM_SRCS viewmgr_demo.c)

ADD_EXECUTABLE(${EXAM_NAME} ${EXAM_SRCS})

PKG_CHECK_MODULES(EXAM_PKGS REQUIRED elementary)
FOREACH(flag ${EXAM_PKGS_CFLAGS})
	SET(EXAM_CFLAGS "${EXAM_CFLAGS} ${flag}")
ENDFOREACH(flag)

SET_TARGET_PROPERTIES(${EXAM_NAME} PROPERTIES COMPILE_FLAGS "${EXAM_CFLAGS}")
TARGET_LINK_LIBRARIES(${EXAM_NAME} ${EXAM_PKGS_LDFLAGS} ${EXAM_TARGET_PKGS_LDFLAGS})
TARGET_LINK_LIBRARIES(${EXAM_NAME} ${EXAM_PKGS_LDFLAGS} ${LIB_NAME})

INSTALL(TARGETS ${EXAM_NAME} DESTINATION /opt/usr/apps/ui-viewmgr/bin)

