SET(DEMO_NAME ui-viewmgr-demo)

SET(SRCS
	 main.cpp
   )

ADD_EXECUTABLE(${DEMO_NAME} ${SRCS})

PKG_CHECK_MODULES(DEMO_PKGS REQUIRED elementary dlog capi-appfw-application capi-system-system-settings appcore-efl capi-appfw-app-manager)

FOREACH(flag ${DEMO_PKGS_CFLAGS})
    SET(PKG_CFLAGS "${PKG_CFLAGS} ${flag}")
ENDFOREACH(flag)

#SET_TARGET_PROPERTIES(${DEMO_NAME} PROPERTIES COMPILE_FLAGS "${PKG_CFLAGS}" LINK_FLAGS -pie)
SET_TARGET_PROPERTIES(${DEMO_NAME} PROPERTIES COMPILE_FLAGS "${PKG_CFLAGS}")
TARGET_LINK_LIBRARIES(${DEMO_NAME} ${DEMO_PKGS_LDFLAGS} ${LIBNAME})
 
SET(GC_SECTIONS_FLAGS "-fdata-sections -ffunction-sections -Wl,--gc-sections")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${PKG_CFLAGS} -Wall -g -fPIE -fPIC -std=c++0x ${GC_SECTIONS_FLAGS}")

INSTALL(TARGETS ${DEMO_NAME} DESTINATION /opt/usr/apps/${DEMO_NAME}/bin)
